# FlyKylin

./: .clang-format  .gitignore  ARCHITECTURE_PROPOSAL.md  ARCHITECTURE_REFACTORING.md  CMakeLists.txt  CMakePresets.json  README.md  SPRINT2_DAY2_SUMMARY.md  agent_prompts.yaml  vcpkg-configuration.json  vcpkg.json  多Agent项目迭代工作流.md  项目总结与Agent使用指南.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: build-and-release.yml
.windsurf/rules/: cpp-coding-standards.md  document-management.md  project-architecture.md  tool-management.md
.windsurf/workflows/: README.md  development-execution.md  requirements-analysis.md
build-linux-qt5-gcc10/: .ninja_log  CPackConfig.cmake  CPackSourceConfig.cmake  build.ninja
build-linux-qt5-gcc10-clean/: .ninja_deps  .ninja_log  CPackConfig.cmake  CPackSourceConfig.cmake  build.ninja
build-test/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CPackConfig.cmake  CPackSourceConfig.cmake  FlyKylin.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
build-test/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
build-test/protocol/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  flykylin_protocol.vcxproj  flykylin_protocol.vcxproj.filters  flykylin_protocol_autogen.vcxproj  flykylin_protocol_autogen.vcxproj.filters
build-test/src/: FlyKylin.vcxproj  FlyKylin.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters
build-test/tests/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  flykylin_tests.vcxproj  flykylin_tests.vcxproj.filters
build-verify/: ALL_BUILD.vcxproj  CPackConfig.cmake  CPackSourceConfig.cmake  FlyKylin.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
build-verify/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  (+5 more)
docs/: BUILD_ENVIRONMENT_DIAGNOSIS.md  BUILD_FIX_ACTION_PLAN.md  CHAT_SCROLL_OPTIMIZATION.md  DEPLOYMENT_GUIDE.md  GETTING_STARTED.md  NETWORK_STATUS_REPORT.md  RKNN_DEBUG_SUMMARY.md  ci-cd-fixes.md  ci-cd-qt6-fix.md  ci-cd.md  ci-performance-optimization.md  ci-round8-ubuntu24-qt-fix.md  quick-start-ci.md  technical-debt.md  环境安装指南.md  用户测试指南.md  飞秋方案.md
examples/: tcp_connection_example.cpp
model/: README.md
protocol/: CMakeLists.txt  messages.proto
scripts/: README.md  build-rk3566-cross.sh  build-windows.ps1  check-environment.ps1  check-environment.sh  deploy-bge-model.sh  deploy-to-board.sh  run-flykylin-optimized.sh  run-flykylin.sh
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  Message.h  PeerNode.h  Version.h.in
src/core/adapters/: ProtobufSerializer.cpp  ProtobufSerializer.h
src/core/adapters/network/: UdpDiscoveryAdapter.cpp  UdpDiscoveryAdapter.h
src/core/ai/: NSFWDetector.cpp  NSFWDetector.h  TextEmbeddingEngine.cpp  TextEmbeddingEngine.h
src/core/communication/: MessageQueue.cpp  MessageQueue.h  NetworkInterfaceCache.cpp  NetworkInterfaceCache.h  PeerDiscovery.cpp  PeerDiscovery.h  RetryStrategy.cpp  RetryStrategy.h  TcpConnection.cpp  TcpConnection.h  TcpConnectionManager.cpp  TcpConnectionManager.h  TcpServer.cpp  TcpServer.h
src/core/config/: ConfigManager.cpp  ConfigManager.h  PlatformConfig.h  UserProfile.cpp  UserProfile.h
src/core/database/: DatabaseService.cpp  DatabaseService.h
src/core/interfaces/: I_Accelerator.h  I_NetworkAdapter.h
src/core/models/: Message.cpp  Message.h  PeerNode.cpp  PeerNode.h
src/core/ports/: I_MessageSerializer.h  I_NetworkAdapter.h
src/core/protobuf/: message.proto
src/core/services/: ChatSearchService.cpp  ChatSearchService.h  FileTransferService.cpp  FileTransferService.h  GroupChatManager.cpp  GroupChatManager.h  LocalEchoService.cpp  LocalEchoService.h  MessageService.cpp  MessageService.h
src/ui/qml/: AvatarLibrary.qml  ChatView.qml  Main.qml  PeerInfoDialog.qml  PeerList.qml  PlatformConfig.qml  SettingsDialog.qml  Style.qml  qmldir
src/ui/viewmodels/: ChatViewModel.cpp  ChatViewModel.h  GlobalSearchViewModel.cpp  GlobalSearchViewModel.h  PeerListViewModel.cpp  PeerListViewModel.h  SettingsViewModel.cpp  SettingsViewModel.h
src/ui/widgets/: PeerListWidget.cpp  PeerListWidget.h
src/ui/windows/: ChatWindow.cpp  ChatWindow.h  MainWindow.cpp  MainWindow.h
tests/: CMakeLists.txt
tests/core/: PeerDiscovery_test.cpp  PeerNode_test.cpp  ProtobufSerializer_test.cpp
tests/core/config/: UserProfile_test.cpp
tests/core/services/: FileTransferService_test.cpp  MessageService_test.cpp
tests/ui/viewmodels/: ChatViewModel_test.cpp
tools/: README.md  add_preprocess_to_onnx.py  add_preprocess_v2.py  analyze_accuracy.py  analyze_nhwc.py  check_onnx.py  check_rknn_io.py  check_rknn_shape.py  convert_bge_to_rk3566.py  convert_clean.py  convert_nchw.py  convert_nchw_int8.py  convert_nchw_int8_v2.py  convert_nchw_no_opt.py  convert_nchw_raw.py  convert_nchw_rknn.py  convert_no_mean.py  convert_no_softmax_rknn.py  convert_nsfw_to_rk3566.py  convert_nsfw_v2.py  convert_original.py  convert_preproc_rknn.py  convert_preproc_to_rknn.py  convert_preproc_v2_rknn.py  convert_with_mean.py  generate_nwch_npy.py  pig_224.npy  porn_224.npy  prepare_test_data.py  query_rknn_info.py  remove_softmax.py  test_bge_rknn_board.py  test_cpp_e2e.py  test_cpp_nsfw.py  test_cpp_preprocess.py  test_input_nhwc.npy  test_onnx_baseline.py  test_rknn_board.py  test_rknn_board_final.py  test_rknn_c_api.py  (+24 more)
(+299 files in other folders)
